# election-ai-assistant

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  output.txt  pyproject.toml  requirements.txt  test_webrtc.py
app/: config.py  main.py
app/models/: user.py
app/routes/: chat.py  dashboard.py  guide.py  help.py  journey.py  map.py  quiz.py  timeline.py
app/services/: ai_service.py  calendar_service.py  election_service.py  firebase_service.py  gemini_service.py  maps_service.py  recommendation.py  translate_service.py
app/utils/: logger.py  styles.py  ui_components.py  validators.py
scratch/: check_imports.py
tests/: test_election_service.py  test_firebase_service.py  test_integration.py  test_logic.py  test_security.py  test_services_advanced.py  test_user_model.py  test_validators.py
